# indo_card_project

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/card/: components.rs  mod.rs  systems.rs
src/card/plugin/: components.rs  mod.rs
src/card/plugin/resources/: card_assets.rs  card_size.rs  deck_data.rs  draw_queue.rs  mod.rs
src/card/plugin/systems/: mod.rs
src/card/plugin/systems/animation/: draw_animation.rs  mod.rs
src/card/plugin/systems/interaction/: card_click.rs  deck_click.rs  hover.rs  mod.rs
src/card/plugin/systems/layout/: hand_layout.rs  mod.rs
src/card/plugin/systems/spawn/: card_spawn.rs  deck_spawn.rs  mod.rs
src/card/plugin/systems/ui/: deck_counter.rs  mod.rs
src/core/: config.rs  data.rs  mod.rs
src/plugin/: card.rs  mod.rs  player_example.rs
